Logo url updated

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <header data-thq="thq-navbar" class="navbar-navbar-interactive">
               <img
                 alt="Company Logo"
-                src="public/finallogo_apv-1500h.jpg"
+                src="public/FinalLogo_APV-HD.png"
                 class="navbar-image1"
               />
               <div data-thq="thq-navbar-nav" class="navbar-desktop-menu">
@@ -813,7 +813,7 @@
                 <div class="footer-newsletter">
                   <img
                     alt="Company Logo"
-                    src="public/finallogo_apv-1500h.jpg"
+                    src="public/FinalLogo_APV-HD.png"
                     class="footer-image1"
                   />
                   <span class="thq-body-small">
