updated index, style.css(para-body class)

--- a/index.html
+++ b/index.html
@@ -495,16 +495,18 @@
                   <h2 class="thq-heading-2">
                     Discover the Power of Our Products
                   </h2>
+                  <span class = "para-body">
                   <p class="thq-body-large">
-                    <p>At <b>APV LOGISTICS LLP</b>, we empower your business with reliable, efficient, and tailored freight transportation solutions. Our products are designed to streamline your supply chain, reduce costs, and ensure timely deliveries. Here’s how we make a difference:</p>
+                    <p>At <b>APV LOGISTICS LLP</b>, we empower your business with reliable, efficient, and tailored freight transportation solutions. Our products are designed to streamline your supply chain, reduce costs, and ensure timely deliveries. Here’s how we make a difference:</p><br>
 
-<p>On-Time Deliveries: Our advanced tracking and logistics systems ensure that your goods arrive at the right place, at the right time—every time.</p>
-<p>Nationwide Coverage: Whether you're shipping locally or across the country, our expansive network of drivers and vehicles ensures seamless transportation solutions.</p>
-<p>Custom Solutions: We offer flexible freight options that can be customized to meet the unique needs of your business, from full truckload to specialized equipment.</p>
-<p>Cost Efficiency: By leveraging our experience and scale, we help optimize your shipping costs, reducing overhead and improving profitability.</p>
-<p>Sustainability Focus: We try our best to reduce our environmental impact through fuel-efficient vehicles and eco-friendly practices, helping you meet your sustainability goals.</p>
+<p><b>On-Time Deliveries</b>: Our advanced tracking and logistics systems ensure that your goods arrive at the right place, at the right time—every time.</p><br>
+<p><b>Nationwide Coverage</b>: Whether you're shipping locally or across the country, our expansive network of drivers and vehicles ensures seamless transportation solutions.</p><br>
+<p><b>Custom Solutions</b>: We offer flexible freight options that can be customized to meet the unique needs of your business, from full truckload to specialized equipment.</p><br>
+<p><b>Cost Efficiency</b>: By leveraging our experience and scale, we help optimize your shipping costs, reducing overhead and improving profitability.</p><br>
+<p><b>Sustainability Focus</b>: We try our best to reduce our environmental impact through fuel-efficient vehicles and eco-friendly practices, helping you meet your sustainability goals.</p><br>
 <p>Our products aren’t just about moving goods—they’re about moving your business forward. Discover how <b>APV LOGISTICS LLP</b> can be your trusted logistics partner.</p>
                   </p>
+                </span>
                   <div class="steps-actions">
                     <button
                       class="thq-button-animated thq-button-filled steps-button"
