updated index.html and added aboutus and dummy login page

--- a/index.html
+++ b/index.html
@@ -71,22 +71,22 @@
             <header data-thq="thq-navbar" class="navbar-navbar-interactive">
               <img
                 alt="Company Logo"
-                src="public/FinalLogo_APV-HD.png"
+                src="public/finallogo_apv-1500h.jpg"
                 class="navbar-image1"
               />
               <div data-thq="thq-navbar-nav" class="navbar-desktop-menu">
                 <nav class="navbar-links1">
                   <span class="thq-link thq-body-small">
-                    <span>Home</span>
+                    <span><a href="index.html">Home</a></span>
                   </span>
                   <span class="thq-link thq-body-small">
-                    <span>Services</span>
+                    <span><a href="index.html">Services</a></span>
                   </span>
                   <span class="thq-link thq-body-small">
-                    <span>About Us</span>
+                    <span><a href="index.html">About Us</a></span>
                   </span>
                   <span class="thq-link thq-body-small">
-                    <span>Contact</span>
+                    <span><a href="index.html">Contact</a></span>
                   </span>
                 </nav>
               </div>
@@ -130,8 +130,12 @@
                   </nav>
                 </div>
                 <div class="navbar-buttons2">
+                  <a href="placeholder.html" class="button thq-button-filled">Login</a>
+                  <a href="placeholder.html" class="button thq-button-outline">Learn More</a>
+<!--
                   <button class="thq-button-filled">Login</button>
                   <button class="thq-button-outline">Register</button>
+-->
                 </div>
               </div>
             </header>
@@ -153,12 +157,16 @@
                 </p>
               </div>
               <div class="hero-actions">
+<!-- Changed all buttons to <a>tag
                 <button class="thq-button-filled hero-button1">
                   <span class="thq-body-small"><span>Get a Quote</span></span>
                 </button>
                 <button class="thq-button-outline hero-button2">
                   <span class="thq-body-small"><span>Learn More</span></span>
                 </button>
+-->
+                <a href="placeholder.html" class="button thq-button-filled hero-button1"><span class="thq-body-small"><span>Get a Quote</span></span></a>
+                <a href="placeholder.html" class="button thq-button-outline hero-button2"><span class="thq-body-small"><span>Learn More</span></span></a>
               </div>
             </div>
             <div class="hero-content2">
@@ -409,12 +417,9 @@
                       </p>
                     </div>
                     <div class="cta-actions">
-                      <button
-                        type="button"
-                        class="thq-button-filled cta-button"
-                      >
-                        <span>Contact Us</span>
-                      </button>
+              <!--        <button type="button" class="thq-button-filled cta-button"><span>Contact Us</span></button>
+                      -->
+                      <a href="placeholder.html" class="button thq-button-filled cta-button"><span>Contact Us</span></a>
                     </div>
                   </div>
                 </div>
@@ -495,24 +500,24 @@
                   <h2 class="thq-heading-2">
                     Discover the Power of Our Products
                   </h2>
-                  <span class = "para-body">
                   <p class="thq-body-large">
-                    <p>At <b>APV LOGISTICS LLP</b>, we empower your business with reliable, efficient, and tailored freight transportation solutions. Our products are designed to streamline your supply chain, reduce costs, and ensure timely deliveries. Here’s how we make a difference:</p><br>
+                    <p>At <b>APV LOGISTICS LLP</b>, we empower your business with reliable, efficient, and tailored freight transportation solutions. Our products are designed to streamline your supply chain, reduce costs, and ensure timely deliveries. Here’s how we make a difference:</p>
 
-<p><b>On-Time Deliveries</b>: Our advanced tracking and logistics systems ensure that your goods arrive at the right place, at the right time—every time.</p><br>
-<p><b>Nationwide Coverage</b>: Whether you're shipping locally or across the country, our expansive network of drivers and vehicles ensures seamless transportation solutions.</p><br>
-<p><b>Custom Solutions</b>: We offer flexible freight options that can be customized to meet the unique needs of your business, from full truckload to specialized equipment.</p><br>
-<p><b>Cost Efficiency</b>: By leveraging our experience and scale, we help optimize your shipping costs, reducing overhead and improving profitability.</p><br>
-<p><b>Sustainability Focus</b>: We try our best to reduce our environmental impact through fuel-efficient vehicles and eco-friendly practices, helping you meet your sustainability goals.</p><br>
+<p>On-Time Deliveries: Our advanced tracking and logistics systems ensure that your goods arrive at the right place, at the right time—every time.</p>
+<p>Nationwide Coverage: Whether you're shipping locally or across the country, our expansive network of drivers and vehicles ensures seamless transportation solutions.</p>
+<p>Custom Solutions: We offer flexible freight options that can be customized to meet the unique needs of your business, from full truckload to specialized equipment.</p>
+<p>Cost Efficiency: By leveraging our experience and scale, we help optimize your shipping costs, reducing overhead and improving profitability.</p>
+<p>Sustainability Focus: We try our best to reduce our environmental impact through fuel-efficient vehicles and eco-friendly practices, helping you meet your sustainability goals.</p>
 <p>Our products aren’t just about moving goods—they’re about moving your business forward. Discover how <b>APV LOGISTICS LLP</b> can be your trusted logistics partner.</p>
                   </p>
-                </span>
                   <div class="steps-actions">
-                    <button
-                      class="thq-button-animated thq-button-filled steps-button"
-                    >
+<!--
+                    <button class="thq-button-animated thq-button-filled steps-button">
                       <span class="thq-body-small">Get a Quote</span>
                     </button>
+-->
+                    <a href="placeholder.html" class="button thq-button-animated thq-button-filled steps-button"><span class="thq-body-small">Get a Quote</span></a>
+
                   </div>
                 </div>
                 <div class="steps-container3">
@@ -815,7 +820,7 @@
                 <div class="footer-newsletter">
                   <img
                     alt="Company Logo"
-                    src="public/FinalLogo_APV-HD.png"
+                    src="public/finallogo_apv-1500h.jpg"
                     class="footer-image1"
                   />
                   <span class="thq-body-small">
@@ -831,11 +836,12 @@
                           class="footer-text-input thq-input"
                         />
                       </div>
-                      <button class="thq-button-outline footer-button">
-                        <span class="thq-body-small">
-                          <span>Subscribe to Newsletter</span>
-                        </span>
+                      <!--
+                      <button class="thq-button-outline footer-button"><span class="thq-body-small">
+                          <span>Subscribe to Newsletter</span></span>
                       </button>
+                      -->
+                      <a href="placeholder.html" class="button thq-button-outline footer-button"><span>Subscribe to Newsletter</span></span></a>
                     </div>
                   </div>
                 </div>
